# garbled-gpt2

./: .cursorrules  .gitignore  Cargo.toml  PLAN.md  README.md  TASKLIST.md  benchmark_full_evaluator.csv  benchmark_full_garbler.csv  benchmark_results.md  benchmark_results.tex  embedding.npy  plaintext_baseline.py
.cursor/rules/: agent.mdc  ai-alignment-rules.mdc  ask.mdc  documentation-rules.mdc  py-dev-rules.mdc
examples/: weight_loading_demo.md
scripts/: summarise.py
src/: csv_writer.rs  lib.rs  memory.rs
weights/: block_0_k.npy  block_0_o.npy  block_0_q.npy  block_0_v.npy  block_5_k.npy  block_5_o.npy  block_5_q.npy  block_5_v.npy
