[package]
name = "garbled-gpt2"
version = "0.1.0"
edition = "2021"

# Binary-only crate: we produce two executables, but no library.

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

[[bin]]
name = "garbler"
path = "src/bin/garbler.rs"

[[bin]]
name = "evaluator"
path = "src/bin/evaluator.rs" 