[package]
name = "garbled-gpt2"
version = "0.1.0"
edition = "2021"

# Binary-only crate: we produce two executables, but no library.

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
# Garbled circuit dependencies
fancy-garbling = { git = "https://github.com/GaloisInc/swanky.git", branch = "dev" }
scuttlebutt = { git = "https://github.com/GaloisInc/swanky.git", branch = "dev" }
ocelot = { git = "https://github.com/GaloisInc/swanky.git", branch = "dev" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
ndarray = "0.15"
ndarray-npy = "0.8"

[[bin]]
name = "garbler"
path = "src/bin/garbler.rs"

[[bin]]
name = "evaluator"
path = "src/bin/evaluator.rs" 